add_library(Solutions
  TwoSum.hpp TwoSum.cpp
  AddTwoNumbers.hpp AddTwoNumbers.cpp
  LongestSubStringWithoutRepeatingCharacters.hpp LongestSubStringWithoutRepeatingCharacters.cpp
  MedianOfTwoSortedArrays.hpp MedianOfTwoSortedArrays.cpp
  LongestPalindromicSubstring.hpp LongestPalindromicSubstring.cpp
  ZigZagConversion.hpp ZigZagConversion.cpp
  ReverseInteger.hpp ReverseInteger.cpp
  StringToInteger.hpp StringToInteger.cpp
  PalindromeNumber.hpp PalindromeNumber.cpp
  RegularExpressionMatching.hpp RegularExpressionMatching.cpp
  ContainerWithMostWater.hpp ContainerWithMostWater.cpp
  IntegerToRoman.hpp IntegerToRoman.cpp
  RomanToInteger.hpp RomanToInteger.cpp
  LongestCommonPrefix.hpp LongestCommonPrefix.cpp
  3Sum.hpp 3Sum.cpp
  3SumClosest.hpp 3SumClosest.cpp
  LetterCombinationsOfAPhoneNumber.hpp LetterCombinationsOfAPhoneNumber.cpp
  4Sum.hpp 4Sum.cpp
  RemoveNthNodeFromEndOfList.hpp RemoveNthNodeFromEndOfList.cpp
  ValidParentheses.hpp ValidParentheses.cpp
  MergeTwoSortedLists.hpp MergeTwoSortedLists.cpp
  GenerateParentheses.hpp GenerateParentheses.cpp
  MergeKSortedLists.hpp MergeKSortedLists.cpp
  SwapNodesInPairs.hpp SwapNodesInPairs.cpp
  ReverseNodesInKGroup.hpp ReverseNodesInKGroup.cpp
  RemoveDuplicatesFromSortedArray.hpp RemoveDuplicatesFromSortedArray.cpp
  RemoveElement.hpp RemoveElement.cpp
  ImplementStrStr.hpp ImplementStrStr.cpp
  DivideTwoIntegers.hpp DivideTwoIntegers.cpp
  SubstringWithConcatenationOfAllWords.hpp SubstringWithConcatenationOfAllWords.cpp
  NextPermutation.hpp NextPermutation.cpp
  LongestValidParentheses.hpp LongestValidParentheses.cpp
)
