add_library(Solutions
  TwoSum.hpp TwoSum.cpp
  AddTwoNumbers.hpp AddTwoNumbers.cpp
  LongestSubstringWithoutRepeatingCharacters.hpp LongestSubstringWithoutRepeatingCharacters.cpp
  MedianOfTwoSortedArrays.hpp MedianOfTwoSortedArrays.cpp
  LongestPalindromicSubstring.hpp LongestPalindromicSubstring.cpp
  ZigZagConversion.hpp ZigZagConversion.cpp
  ReverseInteger.hpp ReverseInteger.cpp
  StringToInteger.hpp StringToInteger.cpp
  PalindromeNumber.hpp PalindromeNumber.cpp
  RegularExpressionMatching.hpp RegularExpressionMatching.cpp
  ContainerWithMostWater.hpp ContainerWithMostWater.cpp
  IntegerToRoman.hpp IntegerToRoman.cpp
  RomanToInteger.hpp RomanToInteger.cpp
  LongestCommonPrefix.hpp LongestCommonPrefix.cpp
  3Sum.hpp 3Sum.cpp
  3SumClosest.hpp 3SumClosest.cpp
  LetterCombinationsOfAPhoneNumber.hpp LetterCombinationsOfAPhoneNumber.cpp
  4Sum.hpp 4Sum.cpp
  RemoveNthNodeFromEndOfList.hpp RemoveNthNodeFromEndOfList.cpp
  ValidParentheses.hpp ValidParentheses.cpp
  MergeTwoSortedLists.hpp MergeTwoSortedLists.cpp
  GenerateParentheses.hpp GenerateParentheses.cpp
  MergeKSortedLists.hpp MergeKSortedLists.cpp
  SwapNodesInPairs.hpp SwapNodesInPairs.cpp
  ReverseNodesInKGroup.hpp ReverseNodesInKGroup.cpp
  RemoveDuplicatesFromSortedArray.hpp RemoveDuplicatesFromSortedArray.cpp
  RemoveElement.hpp RemoveElement.cpp
  ImplementStrStr.hpp ImplementStrStr.cpp
  DivideTwoIntegers.hpp DivideTwoIntegers.cpp
  SubstringWithConcatenationOfAllWords.hpp SubstringWithConcatenationOfAllWords.cpp
  NextPermutation.hpp NextPermutation.cpp
  LongestValidParentheses.hpp LongestValidParentheses.cpp
  SearchInRotatedSortedArray.hpp SearchInRotatedSortedArray.cpp
  SearchForARange.hpp SearchForARange.cpp
  SearchInsertPosition.hpp SearchInsertPosition.cpp
  ValidSudoku.hpp ValidSudoku.cpp
  SudokuSolver.hpp SudokuSolver.cpp
  CountAndSay.hpp CountAndSay.cpp
  CombinationSum.hpp CombinationSum.cpp
  CombinationSumII.hpp CombinationSumII.cpp
  FirstMissingPositive.hpp FirstMissingPositive.cpp
  TrappingRainWater.hpp TrappingRainWater.cpp
  MultiplyStrings.hpp MultiplyStrings.cpp
  WildcardMatching.hpp WildcardMatching.cpp
  JumpGameII.hpp JumpGameII.cpp
  Permutations.hpp Permutations.cpp
  PermutationsII.hpp PermutationsII.cpp
  RotateImage.hpp RotateImage.cpp
  Anagrams.hpp Anagrams.cpp
  Powxn.hpp Powxn.cpp
  NQueens.hpp NQueens.cpp
  NQueensII.hpp NQueensII.cpp
  MaximumSubarray.hpp MaximumSubarray.cpp
  ClimbingStairs.hpp ClimbingStairs.cpp
  HouseRobber.hpp HouseRobber.cpp
  UniquePaths.hpp UniquePaths.cpp
  UniquePathsII.hpp UniquePathsII.cpp
  UniqueBinarySearchTrees.hpp UniqueBinarySearchTrees.cpp
  WordBreak.hpp WordBreak.cpp
  MinimumPathSum.hpp MinimumPathSum.cpp
)
