add_library(Solutions
    TwoSum.hpp TwoSum.cpp
    AddTwoNumbers.hpp AddTwoNumbers.cpp
    LongestSubstringWithoutRepeatingCharacters.hpp LongestSubstringWithoutRepeatingCharacters.cpp
    MedianOfTwoSortedArrays.hpp MedianOfTwoSortedArrays.cpp
    LongestPalindromicSubstring.hpp LongestPalindromicSubstring.cpp
    ZigZagConversion.hpp ZigZagConversion.cpp
    ReverseInteger.hpp ReverseInteger.cpp
    StringToInteger.hpp StringToInteger.cpp
    PalindromeNumber.hpp PalindromeNumber.cpp
    RegularExpressionMatching.hpp RegularExpressionMatching.cpp
    ContainerWithMostWater.hpp ContainerWithMostWater.cpp
    IntegerToRoman.hpp IntegerToRoman.cpp
    RomanToInteger.hpp RomanToInteger.cpp
    LongestCommonPrefix.hpp LongestCommonPrefix.cpp
    3Sum.hpp 3Sum.cpp
    3SumClosest.hpp 3SumClosest.cpp
    LetterCombinationsOfAPhoneNumber.hpp LetterCombinationsOfAPhoneNumber.cpp
    4Sum.hpp 4Sum.cpp
    RemoveNthNodeFromEndOfList.hpp RemoveNthNodeFromEndOfList.cpp
    ValidParentheses.hpp ValidParentheses.cpp
    MergeTwoSortedLists.hpp MergeTwoSortedLists.cpp
    GenerateParentheses.hpp GenerateParentheses.cpp
    MergeKSortedLists.hpp MergeKSortedLists.cpp
    SwapNodesInPairs.hpp SwapNodesInPairs.cpp
    ReverseNodesInKGroup.hpp ReverseNodesInKGroup.cpp
    RemoveDuplicatesFromSortedArray.hpp RemoveDuplicatesFromSortedArray.cpp
    RemoveElement.hpp RemoveElement.cpp
    ImplementStrStr.hpp ImplementStrStr.cpp
    DivideTwoIntegers.hpp DivideTwoIntegers.cpp
    SubstringWithConcatenationOfAllWords.hpp SubstringWithConcatenationOfAllWords.cpp
    NextPermutation.hpp NextPermutation.cpp
    LongestValidParentheses.hpp LongestValidParentheses.cpp
    SearchInRotatedSortedArray.hpp SearchInRotatedSortedArray.cpp
    SearchForARange.hpp SearchForARange.cpp
    SearchInsertPosition.hpp SearchInsertPosition.cpp
    ValidSudoku.hpp ValidSudoku.cpp
    SudokuSolver.hpp SudokuSolver.cpp
    CountAndSay.hpp CountAndSay.cpp
    CombinationSum.hpp CombinationSum.cpp
    CombinationSumII.hpp CombinationSumII.cpp
    FirstMissingPositive.hpp FirstMissingPositive.cpp
    TrappingRainWater.hpp TrappingRainWater.cpp
    MultiplyStrings.hpp MultiplyStrings.cpp
    WildcardMatching.hpp WildcardMatching.cpp
    JumpGameII.hpp JumpGameII.cpp
    Permutations.hpp Permutations.cpp
    PermutationsII.hpp PermutationsII.cpp
    RotateImage.hpp RotateImage.cpp
    Anagrams.hpp Anagrams.cpp
    Powxn.hpp Powxn.cpp
    NQueens.hpp NQueens.cpp
    NQueensII.hpp NQueensII.cpp
    MaximumSubarray.hpp MaximumSubarray.cpp
    ClimbingStairs.hpp ClimbingStairs.cpp
    HouseRobber.hpp HouseRobber.cpp
    UniquePaths.hpp UniquePaths.cpp
    UniquePathsII.hpp UniquePathsII.cpp
    UniqueBinarySearchTrees.hpp UniqueBinarySearchTrees.cpp
    WordBreak.hpp WordBreak.cpp
    MinimumPathSum.hpp MinimumPathSum.cpp
    DecodeWays.hpp DecodeWays.cpp
    WordBreakII.hpp WordBreakII.cpp
    TreeNode.hpp TreeNode.cpp
    UniqueBinarySearchTreesII.hpp UniqueBinarySearchTreesII.cpp
    Triangle.hpp Triangle.cpp
    BestTimeToBuyAndSellStock.hpp BestTimeToBuyAndSellStock.cpp
    MaximumProductSubarray.hpp MaximumProductSubarray.cpp
    MaximalSquare.hpp MaximalSquare.cpp
    HouseRobberII.hpp HouseRobberII.cpp
    EditDistance.hpp EditDistance.cpp
    ScrambleString.hpp ScrambleString.cpp
    DistinctSubsequences.hpp DistinctSubsequences.cpp
    WordSearch.hpp WordSearch.cpp
    SpiralMatrix.hpp SpiralMatrix.cpp
    SpiralMatrixII.hpp SpiralMatrixII.cpp
    JumpGame.hpp JumpGame.cpp
    GrayCode.hpp GrayCode.cpp
    MergeIntervals.hpp MergeIntervals.cpp
    InsertInterval.hpp InsertInterval.cpp
    LengthOfLastWord.hpp LengthOfLastWord.cpp
    PermutationSequence.hpp PermutationSequence.cpp
    PlusOne.hpp PlusOne.cpp
    SqrtX.hpp SqrtX.cpp
    RotateList.hpp RotateList.cpp
    RemoveDuplicatesFromSortedList.hpp RemoveDuplicatesFromSortedList.cpp
    SortColors.hpp SortColors.cpp
    AddBinary.hpp AddBinary.cpp
    SimplifyPath.hpp SimplifyPath.cpp
    SetMatrixZeroes.hpp SetMatrixZeroes.cpp
    SearchA2DMatrix.hpp SearchA2DMatrix.cpp
    Combinations.hpp Combinations.cpp
    MergeSortedArray.hpp MergeSortedArray.cpp
    Subsets.hpp Subsets.cpp
    RemoveDuplicatesFromSortedArrayII.hpp RemoveDuplicatesFromSortedArrayII.cpp
    SameTree.hpp SameTree.cpp
    SearchinRotatedSortedArrayII.hpp SearchinRotatedSortedArrayII.cpp
    RemoveDuplicatesFromSortedListII.hpp RemoveDuplicatesFromSortedListII.cpp
    BinaryTreeLevelOrderTraversal.hpp BinaryTreeLevelOrderTraversal.cpp
    BinaryTreeLevelOrderTraversalII.hpp BinaryTreeLevelOrderTraversalII.cpp
    LargestRectangleInHistogram.hpp LargestRectangleInHistogram.cpp
    SegmentTreeMinimumRangeQuery.hpp SegmentTreeMinimumRangeQuery.cpp
    SubsetsII.hpp SubsetsII.cpp
    BinaryTreeInorderTraversal.hpp BinaryTreeInorderTraversal.cpp
    MinimumWindowSubstring.hpp MinimumWindowSubstring.cpp
    MaximalRectangle.hpp MaximalRectangle.cpp
    PartitionList.hpp PartitionList.cpp
    ListNode.hpp ListNode.cpp
    ReverseLinkedListII.hpp ReverseLinkedListII.cpp
    RestoreIPAddresses.hpp RestoreIPAddresses.cpp
    InterleavingString.hpp InterleavingString.cpp
    SymmetricTree.hpp SymmetricTree.cpp
    ValidateBinarySearchTree.hpp ValidateBinarySearchTree.cpp
    RecoverBinarySearchTree.hpp RecoverBinarySearchTree.cpp
    MaximumDepthOfBinaryTree.hpp MaximumDepthOfBinaryTree.cpp
    BinaryTreeZigzagLevelOrderTraversal.hpp BinaryTreeZigzagLevelOrderTraversal.cpp
    ConstructBinaryTreeFromPreorderAndInorderTraversal.hpp ConstructBinaryTreeFromPreorderAndInorderTraversal.cpp
    ConstructBinaryTreeFromInorderAndPostorderTraversal.hpp ConstructBinaryTreeFromInorderAndPostorderTraversal.cpp
    ConvertSortedArrayToBinarySearchTree.hpp ConvertSortedArrayToBinarySearchTree.cpp
    ConvertSortedListToBinarySearchTree.hpp ConvertSortedListToBinarySearchTree.cpp
    BalancedBinaryTree.hpp BalancedBinaryTree.cpp
    MinimumDepthOfBinaryTree.hpp MinimumDepthOfBinaryTree.cpp
    PathSum.hpp PathSum.cpp
    PathSumII.hpp PathSumII.cpp
    FlattenBinaryTreeToLinkedList.hpp FlattenBinaryTreeToLinkedList.cpp
    PopulatingNextRightPointersInEachNode.hpp PopulatingNextRightPointersInEachNode.cpp
    PopulatingNextRightPointersInEachNodeII.hpp PopulatingNextRightPointersInEachNodeII.cpp
    PascalTriangle.hpp PascalTriangle.cpp
    PascalTriangleII.hpp PascalTriangleII.cpp
    SurroundedRegions.hpp SurroundedRegions.cpp
    BestTimeToBuyAndSellStockII.hpp BestTimeToBuyAndSellStockII.cpp
    BestTimeToBuyAndSellStockIII.hpp BestTimeToBuyAndSellStockIII.cpp
    BestTimeToBuyAndSellStockIV.hpp BestTimeToBuyAndSellStockIV.cpp
)