include_directories(${LeetCode_SOURCE_DIR}/src)

add_executable(Test main.cpp
  TwoSumTest.cpp
  AddTwoNumbersTest.cpp
  LongestSubstringWithoutRepeatingCharactersTest.cpp
  MedianOfTwoSortedArraysTest.cpp
  LongestPalindromicSubstringTest.cpp
  ZigZagConversionTest.cpp
  ReverseIntegerTest.cpp
  StringToIntegerTest.cpp
  PalindromeNumberTest.cpp
  RegularExpressionMatchingTest.cpp
  ContainerWithMostWaterTest.cpp
  IntegerToRomanTest.cpp
  RomanToIntegerTest.cpp
  LongestCommonPrefixTest.cpp
  3SumTest.cpp
  3SumClosestTest.cpp
  LetterCombinationsOfAPhoneNumberTest.cpp
  4SumTest.cpp
  RemoveNthNodeFromEndOfListTest.cpp
  ValidParenthesesTest.cpp
  MergeTwoSortedListsTest.cpp
  GenerateParenthesesTest.cpp
  MergeKSortedListsTest.cpp
  SwapNodesInPairsTest.cpp
  ReverseNodesInKGroupTest.cpp
  RemoveDuplicatesFromSortedArrayTest.cpp
  RemoveElementTest.cpp
  ImplementStrStrTest.cpp
  DivideTwoIntegersTest.cpp
  SubstringWithConcatenationOfAllWordsTest.cpp
  NextPermutationTest.cpp
  LongestValidParenthesesTest.cpp
  SearchInRotatedSortedArrayTest.cpp
  SearchForARangeTest.cpp
  SearchInsertPositionTest.cpp
  ValidSudokuTest.cpp
  SudokuSolverTest.cpp
  CountAndSayTest.cpp
  CombinationSumTest.cpp
  CombinationSumIITest.cpp
  FirstMissingPositiveTest.cpp
  TrappingRainWaterTest.cpp
  MultiplyStringsTest.cpp
  WildcardMatchingTest.cpp
  JumpGameIITest.cpp
  PermutationsTest.cpp
  PermutationsIITest.cpp
  RotateImageTest.cpp
  AnagramsTest.cpp
  PowxnTest.cpp
  NQueensTest.cpp
  NQueensIITest.cpp
  MaximumSubarrayTest.cpp
)

target_link_libraries(Test Solutions)
