include_directories(${LeetCode_SOURCE_DIR}/src)

add_executable(Test main.cpp
  TwoSumTest.cpp
  AddTwoNumbersTest.cpp
  LongestSubstringWithoutRepeatingCharactersTest.cpp
  MedianOfTwoSortedArraysTest.cpp
  LongestPalindromicSubstringTest.cpp
  ZigZagConversionTest.cpp
  ReverseIntegerTest.cpp
  StringToIntegerTest.cpp
  PalindromeNumberTest.cpp
  RegularExpressionMatchingTest.cpp
  ContainerWithMostWaterTest.cpp
  IntegerToRomanTest.cpp
  RomanToIntegerTest.cpp
  LongestCommonPrefixTest.cpp
  3SumTest.cpp
  3SumClosestTest.cpp
  LetterCombinationsOfAPhoneNumberTest.cpp
  4SumTest.cpp
  RemoveNthNodeFromEndOfListTest.cpp
  ValidParenthesesTest.cpp
  MergeTwoSortedListsTest.cpp
  GenerateParenthesesTest.cpp
  MergeKSortedListsTest.cpp
  SwapNodesInPairsTest.cpp
  ReverseNodesInKGroupTest.cpp
  RemoveDuplicatesFromSortedArrayTest.cpp
  RemoveElementTest.cpp
  ImplementStrStrTest.cpp
  DivideTwoIntegersTest.cpp
  SubstringWithConcatenationOfAllWordsTest.cpp
  NextPermutationTest.cpp
  LongestValidParenthesesTest.cpp
  SearchInRotatedSortedArrayTest.cpp
  SearchForARangeTest.cpp
  SearchInsertPositionTest.cpp
  ValidSudokuTest.cpp
  SudokuSolverTest.cpp
  CountAndSayTest.cpp
  CombinationSumTest.cpp
  CombinationSumIITest.cpp
  FirstMissingPositiveTest.cpp
  TrappingRainWaterTest.cpp
  MultiplyStringsTest.cpp
  WildcardMatchingTest.cpp
  JumpGameIITest.cpp
  PermutationsTest.cpp
  PermutationsIITest.cpp
  RotateImageTest.cpp
  AnagramsTest.cpp
  PowxnTest.cpp
  NQueensTest.cpp
  NQueensIITest.cpp
  MaximumSubarrayTest.cpp
  ClimbingStairsTest.cpp
  HouseRobberTest.cpp
  UniquePathsTest.cpp
  UniquePathsIITest.cpp
  UniqueBinarySearchTreesTest.cpp
  WordBreakTest.cpp
  MinimumPathSumTest.cpp
  DecodeWaysTest.cpp
  WordBreakIITest.cpp
  TreeNodeTest.cpp
  UniqueBinarySearchTreesIITest.cpp
  TriangleTest.cpp
  BestTimeToBuyAndSellStockTest.cpp
  MaximumProductSubarrayTest.cpp
  MaximalSquareTest.cpp
  HouseRobberIITest.cpp
  EditDistanceTest.cpp
  ScrambleStringTest.cpp
  DistinctSubsequencesTest.cpp
  WordSearchTest.cpp
  SpiralMatrixTest.cpp
  SpiralMatrixIITest.cpp
  JumpGameTest.cpp
)

target_link_libraries(Test Solutions)
